<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab7</name>
  <version>0.0.0</version>
  <description>Lab7 package for launching URDF in Gazebo and RViz</description>
  <maintainer email="pranavlakshman79@gmail.com">pranavlakshmanan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>